// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrum combined with page title 1`] = `
<Breadcrumb
  title={true}
>
  <Breadcrumb
    bsClass="breadcrumb"
    className="breadcrumbs-pf-title"
  >
    <ol
      aria-label="breadcrumbs"
      className="breadcrumbs-pf-title breadcrumb"
      role="navigation"
    >
      <BreadcrumbItem
        active={false}
        href="#"
      >
        <li
          className=""
        >
          <SafeAnchor
            componentClass="a"
            href="#"
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Home
            </a>
          </SafeAnchor>
        </li>
      </BreadcrumbItem>
      <BreadcrumbItem
        active={false}
        href="http://getbootstrap.com/components/#breadcrumbs"
      >
        <li
          className=""
        >
          <SafeAnchor
            componentClass="a"
            href="http://getbootstrap.com/components/#breadcrumbs"
          >
            <a
              href="http://getbootstrap.com/components/#breadcrumbs"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              Library
            </a>
          </SafeAnchor>
        </li>
      </BreadcrumbItem>
      <BreadcrumbItem
        active={true}
      >
        <li
          className="active"
        >
          <span>
            Data
          </span>
        </li>
      </BreadcrumbItem>
    </ol>
  </Breadcrumb>
</Breadcrumb>
`;

exports[`Breadcrumb icon renders properly 1`] = `
<Breadcrumb
  title={false}
>
  <Breadcrumb
    bsClass="breadcrumb"
    className=""
  >
    <ol
      aria-label="breadcrumbs"
      className="breadcrumb"
      role="navigation"
    >
      <BreadcrumbItem
        active={false}
        href="#"
      >
        <li
          className=""
        >
          <SafeAnchor
            componentClass="a"
            href="#"
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Home
            </a>
          </SafeAnchor>
        </li>
      </BreadcrumbItem>
      <BreadcrumbItem
        active={false}
        href="http://getbootstrap.com/components/#breadcrumbs"
      >
        <li
          className=""
        >
          <SafeAnchor
            componentClass="a"
            href="http://getbootstrap.com/components/#breadcrumbs"
          >
            <a
              href="http://getbootstrap.com/components/#breadcrumbs"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              Library
            </a>
          </SafeAnchor>
        </li>
      </BreadcrumbItem>
      <BreadcrumbItem
        active={true}
      >
        <li
          className="active"
        >
          <span>
            Data
          </span>
        </li>
      </BreadcrumbItem>
    </ol>
  </Breadcrumb>
</Breadcrumb>
`;
